<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.qualitylabs.wikicoc.ChooseSpellDarkActivity">

    <!-- On inclu la App Bar en appelant son layout, l'id servira à l'appeler en Java-->
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/app_bar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/poison"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:background="@drawable/poison_spell" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="72dp"
                        android:layout_marginLeft="88dp"
                        android:gravity="center"
                        android:text="@string/poison_spell" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/earthquake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/poison"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:background="@drawable/earthquake_spell" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="72dp"
                        android:layout_marginLeft="88dp"
                        android:gravity="center"
                        android:text="@string/earthquake_spell" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/haste"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/earthquake"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:background="@drawable/haste_spell" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="72dp"
                        android:layout_marginLeft="88dp"
                        android:gravity="center"
                        android:text="@string/haste_spell" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
